--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -26,6 +26,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/header',
 	'components/press',
 	'components/video',
+	'components/menu',
 	'components/team',
 	'components/testimonials',
 	'components/image-with-text';
