--- a/assets/sass/general/_colors.scss
+++ b/assets/sass/general/_colors.scss
@@ -6,13 +6,13 @@
 $white: #fff;
 $black: #061a21;
 $gold: #c4a44c;
-$dark-blue: #353556;
+$dark-blue: #2c6888;
 $dark-blue-text: #002e52;
 $dark-blue-menu-item: #303052;
-$light-grey: #d2d2d2;
+$light-grey: #f9f9f9;
 $red: #e8114b;
-$grey: #909090;
-$grey-text: #444444;
+$grey: #E5E5E5;
+$grey-text: #2C2C2C;
 $light-grey: #e9e9e6;
 $grey-blue: #536269;
 $beige: #f3ede2;
