Style for info, image-with-title and some general style/fonts

--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -1,12 +1,13 @@
 .testimonials-section {
   border: 1px solid red;
+
   &__wrapper {
     position: relative;
   }
   &__slider {
     display: flex;
     flex-flow: row;
-
+    overflow-x: hidden;
   }
   &__item {
     min-width: 100%;
