--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -24,8 +24,9 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'general/global-styles',
 	'components/footer',
 	'components/header',
+	'components/info',
 	'components/press',
 	'components/video',
 	'components/team',
 	'components/testimonials',
-	'components/image-with-text';
+	'components/image-with-title';
