--- a/assets/sass/general/_colors.scss
+++ b/assets/sass/general/_colors.scss
@@ -13,7 +13,7 @@ $light-grey: #d2d2d2;
 $red: #e8114b;
 $grey: #909090;
 $grey-text: #444444;
-$light-grey: #e9e9e6;
+// $light-grey: #e9e9e6;
 $grey-blue: #536269;
 $beige: #f3ede2;
 $text-black: #2a2e2e;
@@ -21,3 +21,7 @@ $text-black: #2a2e2e;
 $popup-dark-grey: #545454;
 $popup-grey: #bbbbbb;
 $popup-light-gray: #d6d6d6;
+
+$light-gray: #f9f9f9;
+$gray: #515251;
+$blue: #2c6888;
