--- a/assets/sass/general/_font-families.scss
+++ b/assets/sass/general/_font-families.scss
@@ -3,6 +3,7 @@
 ****************/
 
 // Families definitions
+// Temporarily here until we clear the files
 @font-face {
 	font-family: 'Exo2-Bold';
 	src: url('./fonts/Exo2-Bold.ttf') format('truetype');
@@ -34,7 +35,42 @@
 	font-weight: normal;
 }
 
+/**
+ * Use this fonts
+ */
+@font-face {
+	font-family: 'Raleway Regular';
+	src: url('assets/fonts/Raleway-Regular.ttf') format('woff2');
+	font-weight: normal;
+}
+@font-face {
+	font-family: 'Raleway Bold';
+	src: url('assets/fonts/Raleway-Bold.ttf') format('woff2');
+	font-weight: normal;
+}
+@font-face {
+	font-family: 'Raleway Black';
+	src: url('assets/fonts/Raleway-Black.ttf') format('woff2');
+	font-weight: normal;
+}
+@font-face {
+	font-family: 'Montserrat Regular';
+	src: url('assets/fonts/Montserrat-Regular.ttf') format('woff2');
+	font-weight: normal;
+}
+@font-face {
+	font-family: 'Montserrat Bold';
+	src: url('assets/fonts/Montserrat-Bold.ttf') format('woff2');
+	font-weight: normal;
+}
+
 // Families variables
+$raleway: 'Raleway Regular';
+$raleway-bold: 'Raleway Bold';
+$raleway-black: 'Raleway Black';
+$montserrat: 'Montserrat Regular';
+$montserrat-bold: 'Montserrat Bold';
+
 $Exo2: 'Exo2 Regular';
 $Exo2-light: 'Exo2 Light';
 $Exo2-medium: 'Exo2 Medium';
