--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -61,7 +61,7 @@
     content: '';
     width: 80px;
     height: 10px; 
-    background: $dark-blue;
+    background: red;
     position: absolute;
     left: calc(50% - 42px); 
     bottom: -22px;
