--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -17,7 +17,6 @@ body {
 }
 .pagination {
 	font-family: $Segoeui;
-	color: $dark-blue;
 	.left {
 		margin-bottom: 8px;
 	}
@@ -42,7 +41,6 @@ body {
 	}
 	&:hover {
 		color: $white;
-		background-color: $red;
 	}
 }
 h1,
@@ -115,7 +113,7 @@ em {
 	letter-spacing: 0.4px;
 	z-index: 1111;
 	a {
-		color: $red;
+		color: red;
 	}
 }
 
@@ -205,7 +203,7 @@ img[class$='-imgtobg'] {
 		width: 65px;
 		height: 4px;
 		bottom: -21px;
-		background-color: $red;
+		background-color: red;
 	}
 }
 a.disabled {
