Style for video section on mobile

--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -3,8 +3,11 @@
 *************************************/
 
 // Default typography styles for the site
+html {
+	scroll-behavior: smooth;
+}
 body {
-	background-color: $light-gray;
+	background-color: $light-grey;
 }
 // Plugin styles
 // .disqus-footer__wrapper {
