--- a/assets/sass/components/_video.scss
+++ b/assets/sass/components/_video.scss
@@ -1,5 +1,45 @@
 .video-section {
+  position: relative;
+  background: $dark-black;
   video {
+    position: relative;
     width: 100%;
+    height: 510px;
+    object-fit: cover;
+  }
+  &__video {
+  } 
+  &__scroll {
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    z-index: 2;
+    transform: translate(0, -50%);
+
+    span {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 40px;
+      height: 40px;
+      margin-left: -23px;
+      border: 3px solid $light-grey;
+      border-radius: 100%;
+      box-sizing: border-box;
+
+      &::after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        content: '';
+        width: 14px;
+        height: 14px;
+        margin: -10px 0 0 -7px;
+        border-left: 3px solid $light-grey;
+        border-bottom: 3px solid $light-grey;
+        transform: rotate(-45deg);
+        box-sizing: border-box;
+      }
+    }
   }
 }
