--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -28,6 +28,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/press',
 	'components/video',
 	'components/menu',
+	'components/footer',
 	'components/team',
 	'components/testimonials',
 	'components/image-with-title';
