--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -1,6 +1,17 @@
 .testimonials-section {
-  border: 1px solid red;
-
+  position: relative;
+  margin-bottom: 120px;
+  // overflow-x: hidden;
+  padding: 40px 5%; 
+  &__background {
+    position: absolute;
+    width: 140%;
+    top: 0;
+    left: -20%;
+    bottom: 0;
+    background: #e4e4e4;
+    transform: rotate(-5deg);
+  }
   &__wrapper {
     position: relative;
   }
@@ -8,12 +19,15 @@
     display: flex;
     flex-flow: row;
     overflow-x: hidden;
+    margin-top: 100px;
+
   }
   &__item {
     min-width: 100%;
     position: relative;
     display: flex;
     flex-flow: column;
+    justify-content: flex-start;
     transition: 0.5s;
 
   }
@@ -23,13 +37,47 @@
     border-radius: 50%;
     background: red;
     position: absolute;
-    top: 50%;
+    bottom: 5%;
+
   }
   &__prev {
-    left: 20px;
+    left: 30%;
+  }
+  &__middle {
+    left: 50%;
   }
   &__next {
-    right: 20px;
+    right: 30%;
   }
+  &__item-title {
+    width: 80%;
+    margin: 0 auto 20px;
+    font-size: 30px;
+  	font-family: $raleway-black;
+    text-transform: uppercase;
+    text-align: center;
 
+  }
+  &__item-subtitle {
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 0.1em;
+    font-family: $raleway;
+    width: 60px;
+    margin: 0 auto 35px;
+    
+  }
+  &__item-content {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 16px;
+    p {
+      font-family: $montserrat;
+      text-align: center;
+      line-height: 2;
+    } 
+
+
+  }
 }
+
