--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -54,6 +54,8 @@ h5 {
 h1 {
 	position: relative;
 	font-size: 30px;
+	text-transform: uppercase;
+	width: 80%;
 
 	&:after {
 		content: '';
@@ -74,6 +76,9 @@ h2 {
 h3 {
 	font-size: 18px;
 	letter-spacing: 1.8px;
+	margin-bottom: 20px;
+	font-family: $raleway;
+	color: $grey;
 }
 p {
 	margin-bottom: 20px;
