--- a/assets/sass/components/_image-with-title.scss
+++ b/assets/sass/components/_image-with-title.scss
@@ -5,55 +5,50 @@
   margin-bottom: 100px; // temp
 
   &__wrapper {
+    width: 45%;
     margin-bottom: 30px;
-    width: 48%;
     overflow: hidden;
   }
   &__link {
     position: relative;
-    // width: 100%;
+    display: block;
+    width: 100%;
+    height: 174px;
+    background-size: cover;
+    background-position: center;
+
   }
   &__image {
-    display: block;
-    height: 174px;
+    display: flex;
     width: 100%;
     height: auto;
+    height: 174px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
 
-  &__overlay-title {
+  &__overlay {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100%;
     width: 100%;
-    font-size: 14px;
-    font-family: $raleway-black;
-    color: $white;
-    background-color: rgba(189, 207, 217, 0.2);
-    text-align: center;
-    text-transform: uppercase;
+    background-color: rgba(44, 104, 136, .2);
   }
-  // &__content {
-  //   &-title {
-  //     position: absolute;
-  //     top: 50%;
-  //     left: 50%;
-  //     transform: translate(-50%, -50%);
-  //     font-size: 14px;
-  //     font-family: $raleway-black;
-  //     color: $white;
-  //     text-align: center;
-  //     text-transform: uppercase;
-  //   }
-  // }
+  &__title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 14px;
+      font-family: $raleway-black;
+      color: $white;
+      text-align: center;
+      text-transform: uppercase;
+  }
 }
 
 // @include tablet() {
