--- a/assets/sass/components/_image-with-title.scss
+++ b/assets/sass/components/_image-with-title.scss
@@ -5,29 +5,19 @@
   margin-bottom: 100px; // temp
 
   &__wrapper {
-    width: 45%;
+    width: 42%;
     margin-bottom: 30px;
     overflow: hidden;
   }
   &__link {
     position: relative;
-    display: block;
-    width: 100%;
-    height: 174px;
-    background-size: cover;
-    background-position: center;
-
-  }
-  &__image {
     display: flex;
     width: 100%;
-    height: auto;
-    height: 174px;
+    height: 175px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
   }
-
   &__overlay {
     position: absolute;
     top: 0;
@@ -36,7 +26,7 @@
     right: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(44, 104, 136, .2);
+    background-color: rgba(44, 104, 136, .3);
   }
   &__title {
       position: absolute;
@@ -51,39 +41,39 @@
   }
 }
 
-// @include tablet() {
-//   .image-text-component {
-//     &__image {
-//       height: 300px;
-//     }
-//     // &__content {
-//     //   &-title {
-//     //     font-size: 20px;
-//     //   }
-//     // }
-//   }
-// }
+@include tablet() {
+  .image-text-component {
+    &__wrapper {
+      width: 48%;
+      margin-bottom: 0;
+    }
+    &__link {
+      height: 375px;
+    }
+    &__title {
+      font-size: 18px;
+    }
+  }
+}
 
-// @include desktop() {
-//   .image-text-component {
-//     &__wrapper {
-//       // margin-bottom: 40px;
-
-//       &:nth-child(odd) {
-//         width: 55%;
-//       }
-//       &:nth-child(even) {
-//         width: 35%;
-//         margin-top: 80px;
-//       }
-//     }
-//     &__image {
-//       &:nth-child(odd) {
-//         height: 450px;
-//       }
-//       &:nth-child(even) {
-//         height: 480px;
-//       }
-//     }
-//   }
-// }
+@include desktop() {
+  .image-text-component {
+    &__wrapper {
+      &:nth-child(odd) {
+        width: 55%;
+      }
+      &:nth-child(even) {
+        width: 35%;
+        margin-top: 80px;
+      }
+    }
+    &__link {
+      &:nth-child(odd) {
+        height: 450px;
+      }
+      &:nth-child(even) {
+        height: 500px;
+      }
+    }
+  }
+}
