--- a/assets/sass/general/_colors.scss
+++ b/assets/sass/general/_colors.scss
@@ -7,7 +7,8 @@ $white: #fff;
 $dark-black: #000;
 $black: #061a21;
 $light-grey: #f9f9f9;
-$grey-text: #2C2C2C;
+$black-text: #2C2C2C;
+$grey-text: #6a6a6a;
 $light-gray: #e9e9e6;
 $gray: #515251;
 $blue: #2c6888;
