--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -26,6 +26,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/header',
 	'components/info',
 	'components/press',
+	'components/project-hero',
 	'components/video',
 	'components/menu',
 	'components/footer',
