--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -27,6 +27,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/info',
 	'components/press',
 	'components/project-hero',
+	'components/project-about',
 	'components/video',
 	'components/menu',
 	'components/footer',
