--- a/assets/sass/components/_project-hero.scss
+++ b/assets/sass/components/_project-hero.scss
@@ -8,7 +8,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    // max-height: 200px;
+    height: 200px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -19,6 +19,10 @@
   &__titles {
     margin-bottom: 80px;
 
+    &-subtitle {
+      color: $gray;
+      text-transform: lowercase;
+    }
   }
   &__short-info {
     font-size: 16px;
@@ -29,6 +33,18 @@
     b {
       font-family: $raleway-black;
       color: $black-text;
+    }
+    &-links {
+      display: flex;
+      margin-top: 35px;
+      a {
+        display: flex;
+        width: 50px;
+        height: 20px;
+        margin-right: 10px;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
     }
   }
 }
