--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -1,27 +1,64 @@
 .team {
   position: relative;
+  margin-bottom: 105px;
   &__wrapper {
     width: 90%;
     margin: 0 auto;
-    
+  }
+  &__titles {
+    margin-bottom: 90px;
   }
   &__peoples-slider {
     display: flex;
     overflow-x: hidden;
   }
   &__member-wrapp {
-    min-width: 100%;
-    width: 100%;
+    position: relative;
     display: flex;
     flex-flow: column;
-    position: relative;
+    align-items: center;
+    min-width: 100%;
+    width: 100%;
     transition: 0.5s;
   }
   &__member-image {
-    width: 100%;
-    height: 250px;
+    position: relative;
+    width: 90%;
+    height: 350px;
+    margin-bottom: 80px;
     background-position: center;
     background-size: cover;
+    box-shadow: 10px 18px 20px -6px rgba(69, 90, 100, 0.25);
+  }
+  &__member-name {
+    position: relative;
+    width: 230px;
+    font-size: 24px;
+    line-height: 34px;
+    letter-spacing: 3.2px;
+    font-family: $raleway-black;
+    text-transform: uppercase;
+    color: $black;
+    text-align: center;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 50%;
+      top: -30px;
+      width: 35px;
+      height: 5px;
+      background: $black;
+      transform: translate(-50%);
+    }
+  }
+  &__member-position {
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 3.2px;
+    color: $gray;
+    font-family: $montserrat;
+    text-transform: lowercase;
   }
   &__slide {
     position: absolute;
