--- a/assets/sass/general/_colors.scss
+++ b/assets/sass/general/_colors.scss
@@ -6,6 +6,7 @@
 $white: #fff;
 $dark-black: #000;
 $black: #061a21;
+$black-2: #111422;
 $light-grey: #f9f9f9;
 $black-text: #2C2C2C;
 $grey-text: #6a6a6a;
