--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -29,6 +29,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 0.5s;
+
   }
   &__member-image {
     position: relative;
@@ -107,6 +109,45 @@
   &__next {
     right: 10px;
     transform: rotate(-45deg);
+  }
+
+  &__cast-wrapp {
+    padding: 0 5%;
+    background-color: rgba(228, 228, 228, 0.4);
+  }
+  &__cast-link {
+    padding: 0 5% 100px;
+    font-size: 16px;
+    line-height: 16px;
+    font-family: $raleway;
+    color: $blue;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  &__full-cast {
+    padding: 80px 0;
+    display: none;
+    flex-flow: column;
+    font-size: 14px;
+    line-height: 24px;
+    font-family: $montserrat;
+    transition: all 0.5s;
+    h3 {
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 3.2px;
+      color: $black;
+      text-align: center;
+      font-family: $raleway-black;
+    }
+    p:first-child {
+      font-size: 14px;
+      font-family: $montserrat;
+    }
+    b, strong {
+      font-family: $montserrat-bold;
+    }
   }
 }
 .move-top {
