testimonials are done

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -29,6 +29,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/video',
 	'components/menu',
 	'components/footer',
+	'components/gallery',
 	'components/team',
 	'components/testimonials',
 	'components/image-with-title';
