--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -112,8 +112,12 @@
   }
 
   &__cast-wrapp {
+    height: 0;
+    position: relative;
+    overflow: hidden;
     padding: 0 5%;
     background-color: rgba(228, 228, 228, 0.4);
+    transition: .5s;
   }
   &__cast-link {
     padding: 0 5% 100px;
@@ -122,17 +126,24 @@
     font-family: $raleway;
     color: $blue;
     cursor: pointer;
-    transition: 0.5s;
   }
 
   &__full-cast {
-    padding: 80px 0;
-    display: none;
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 5%;
+    left: 5%;
+    bottom: 0;
     flex-flow: column;
     font-size: 14px;
     line-height: 24px;
     font-family: $montserrat;
-    transition: all 0.5s;
+    transition: all .5s;
+
+    &-inner {
+      padding: 80px 0;
+    }
     h3 {
       font-size: 20px;
       line-height: 24px;
