--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -1,13 +1,14 @@
 .project-galery {
-  position: relative;
+  // position: relative;
+  // overflow-x: hidden;
   &__wrapper {
     display: flex;
-    overflow: hidden;
+    overflow-x: scroll;
     position: relative;
   }
   &__item {
-    min-width: 33%;
-    height: 300px;
+    min-width: 48%;
+    height: 188px;
     background-position: center;
     background-size: cover;
    }
@@ -28,5 +29,64 @@
   &__next {
     right: 10px;
     transform: rotate(-45deg);
+  }
+  &__modal {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.8);
+    // visibility: collapse;
+    display: none;
+    transition: 0.5s;
+  }
+  &__modal-close {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    color: $white;
+    top: 30px;
+    right: 30px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    &:before, 
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      top: 0px;
+      width: 2px;
+      height: 30px;
+      background-color: $white;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(135deg);
+    }
+  }
+  &__image {
+    width: 100%;
+    height: auto;
+    margin-right: 50px;
+    padding: 50px;
+
+  }
+}
+.open-modal {
+  // visibility: visible;
+  display: block;
+  // height: 100vh;
+  z-index: 50;
+}
+
+@include desktop() {
+  .project-galery {
+    &__item {
+      min-width: 33.33%;
+    }
   }
 }
