--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -32,4 +32,5 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/gallery',
 	'components/team',
 	'components/testimonials',
+	'components/modal',
 	'components/image-with-title';
