--- a/assets/sass/components/_modal.scss
+++ b/assets/sass/components/_modal.scss
@@ -10,8 +10,8 @@
     
   } 
   &__image {
-    min-width: 100%;
-    width: 100%;
+    width: auto;
+    height: auto;
     display: flex;
     position: relative;
     transition: 0.5s;
