--- a/assets/sass/components/_project-hero.scss
+++ b/assets/sass/components/_project-hero.scss
@@ -15,6 +15,7 @@
   }
   &__content {
     margin: 40px 0;
+    padding: 0 15%;
   }
   &__titles {
     margin-bottom: 80px;
@@ -44,6 +45,46 @@
         margin-right: 10px;
         background-size: contain;
         background-repeat: no-repeat;
+      }
+    }
+  }
+}
+
+@include desktop() {
+  .hero {
+    &__wrapper {
+      flex-direction: row-reverse;
+      margin-bottom: 150px;
+    }
+    &__image {
+      width: 50%;
+      height: 800px;
+    }
+    &__content {
+      align-self: flex-end;
+      margin: 0;
+    }
+    &__titles {
+
+      &-title {
+        font-size: 44px;
+        letter-spacing: 8.8px;
+      }
+      &-subtitle {
+        font-size: 34px;
+        line-height: 44px;
+        letter-spacing: 3.5px;
+      }
+    }
+    &__short-info {
+      font-size: 20px;
+      line-height: 34px;
+
+      &-links {
+        a {
+          width: 80px;
+          height: 30px;
+        }
       }
     }
   }
