--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -170,6 +170,18 @@ em {
 	overflow: hidden;
 	height: 100vh;
 }
+.site-content {
+	transition: 1.4s;
+	min-height: 100vh;
+	height: 100%;
+
+}
+@keyframes showContetn {
+	0% { opacity: 0.8; }
+	30% { opacity: 0.1; }
+	50% { opacity: 0; }
+	100% {opacity: 1; }
+}
 
 // image to background helper class
 img[class$='-imgtobg'] {
