--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -33,4 +33,5 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/team',
 	'components/testimonials',
 	'components/modal',
+	'components/site-animation',
 	'components/image-with-title';
