--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -52,6 +52,7 @@
     border-width: 0 4px 4px 0;
     display: inline-block;
     padding: 8px;
+    cursor: pointer;
   }
   &__prev {
     left: 30%;
