Project about desktop basic style

--- a/assets/sass/components/_project-about.scss
+++ b/assets/sass/components/_project-about.scss
@@ -21,3 +21,20 @@
     }
   }
 }
+
+@include desktop() {
+  .about-project {
+    &__description {
+      flex-direction: row;
+    }
+    &__box {
+      columns: 2 350px;
+      column-gap: 25px;
+      &:first-child {
+        margin-bottom: 0;
+      }
+      &:last-child {
+      }
+    }
+  }
+}
