--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -246,7 +246,9 @@ a.disabled {
 
 @include desktop() {
 	.wrapper {
-		padding: 0 15%;
+		max-width: 1280px;
+		margin: 0 auto;
+		padding: 0;
 	}
 	h1 {
 
