--- a/assets/sass/components/_project-about.scss
+++ b/assets/sass/components/_project-about.scss
@@ -28,12 +28,13 @@
       flex-direction: row;
     }
     &__box {
-      columns: 2 350px;
-      column-gap: 25px;
       &:first-child {
+        margin-right: 25px;
         margin-bottom: 0;
       }
       &:last-child {
+        columns: 2 300px;
+        column-gap: 25px;
       }
     }
   }
