--- a/assets/sass/components/_project-hero.scss
+++ b/assets/sass/components/_project-hero.scss
@@ -63,12 +63,14 @@
     &__content {
       align-self: flex-end;
       margin: 0;
+      padding: 0 10%;
     }
     &__titles {
 
       &-title {
         font-size: 44px;
         letter-spacing: 8.8px;
+        width: 100%;
       }
       &-subtitle {
         font-size: 34px;
