--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -17,9 +17,9 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    min-width: 100%;
+    // min-width: 100%;
     width: 100%;
-    height: 540px;
+    height: 570px;
     transition: 0.5s;
     overflow: hidden;
   }
@@ -34,12 +34,12 @@
   }
   &__member-image {
     position: relative;
-    width: 90%;
+    width: 80%;
     height: 350px;
     margin-bottom: 80px;
     background-position: center;
     background-size: cover;
-    box-shadow: 10px 18px 20px -6px rgba(69, 90, 100, 0.25);
+    box-shadow: 10px 30px 30px -6px rgba(69, 90, 100, 0.25);
   }
   &__member-name {
     position: relative;
@@ -64,22 +64,26 @@
     }
   }
   &__member-position {
+    width: 230px;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 3.2px;
     color: $gray;
     font-family: $montserrat;
     text-transform: lowercase;
+    text-align: center;
   }
   &__member-description {
     position: relative;
+    width: 80%;
+    // max-width: 250px;
     margin-top: 40px;
     padding: 0 30px;
     font-size: 14px;
     line-height: 24px;
     font-family: $montserrat;
     color: $black-2;
-
+    text-align: center;
 
     &::after {
       content: '';
@@ -95,20 +99,28 @@
   &__slide {
     position: absolute;
     top: 50%;
-    background-attachment: fixed;
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
+    width: 0;
+    height: 0;
+    // background-attachment: fixed;
+    // border: solid black;
+    // border-width: 0 3px 3px 0;
+    // display: inline-block;
+    // padding: 3px;
 
   }
   &__prev {
-    left: 10px;
-    transform: rotate(135deg);
+    left: 13px;
+    border-top: 13px solid transparent;
+    border-bottom: 13px solid transparent;
+    border-right: 13px solid $gray-white;
+    // transform: rotate(135deg);
   }
   &__next {
-    right: 10px;
-    transform: rotate(-45deg);
+    right: 13px;
+    border-top: 13px solid transparent;
+    border-bottom: 13px solid transparent;
+    border-left: 13px solid #c4c4c4;
+    // transform: rotate(-45deg);
   }
 
   &__cast-wrapp {
@@ -163,4 +175,28 @@
 }
 .move-top {
   top: -410px;
+}
+
+@include desktop() {
+  .team {
+    &__wrapper {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    &__peoples-slider {
+      flex-wrap: wrap;
+      overflow-x: unset;
+    }
+    &__member {
+      width: 350px;
+      margin-bottom: 40px;
+    }
+    &__member-image {
+      width: 100%;
+      max-width: 250px;
+    }
+    &__slide {
+      display: none;
+    }
+  }
 }
