Team section on desktop

--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -251,6 +251,9 @@ a.disabled {
 		padding: 0 7%;
 	}
 	h1 {
+		font-size: 44px;
+		line-height: 52px;
+		letter-spacing: 2px;
 
 		&::after {
 			bottom: -40px;
