--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    // min-width: 100%;
+    min-width: 100%;
     width: 100%;
     height: 570px;
     transition: 0.5s;
@@ -75,7 +75,7 @@
   }
   &__member-description {
     position: relative;
-    width: 80%;
+    // width: 80%;
     // max-width: 250px;
     margin-top: 40px;
     padding: 0 30px;
@@ -174,26 +174,25 @@
   }
 }
 .move-top {
-  top: -410px;
+  top: -420px;
 }
 
 @include desktop() {
   .team {
     &__wrapper {
       max-width: 1200px;
-      margin: 0 auto;
     }
     &__peoples-slider {
       flex-wrap: wrap;
-      overflow-x: unset;
+      justify-content: space-between;
     }
     &__member {
-      width: 350px;
+      min-width: 0;
+      max-width: 280px;
       margin-bottom: 40px;
     }
-    &__member-image {
+    &__member-wrapp {
       width: 100%;
-      max-width: 250px;
     }
     &__slide {
       display: none;
