--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -132,7 +132,8 @@
     transition: .5s;
   }
   &__cast-link {
-    padding: 0 5% 100px;
+    margin-bottom: 100px;
+    // padding: 0 5% 100px;
     font-size: 16px;
     line-height: 16px;
     font-family: $raleway;
@@ -196,6 +197,24 @@
     }
     &__slide {
       display: none;
+    }
+
+    &__full-cast {
+      max-width: 1440px;
+      margin: 0 auto;
+
+      &-inner {
+        column-count: 2;
+        column-fill: balance;
+      }
+    }
+  }
+}
+
+@include desktop-lg() {
+  .team {
+    &__wrapper {
+      max-width: 1440px;
     }
   }
 }
