--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -15,9 +15,15 @@
     width: 140px;
     display: flex;
     position: relative;
-  
+    a {
+      display: block;
+      z-index: 10;
+      width: auto;
+      height: auto;
+    }
     img {
       width: auto;
+      z-index: 100;
       height: 40px;
     }
   }
@@ -159,7 +165,7 @@
     } 
   }
   .header {
-    background: transparent;
+    // background: transparent;
     &__hamburger-wrapp {
       display: none;
     }
@@ -171,5 +177,13 @@
       opacity: 1;
       background: transparent;
     }
+  }
+  .home {
+    // .header {
+    //   .menu-item {
+    //     color: #fff;
+    //   }
+
+    // }
   }
 }
