--- a/assets/sass/components/_project-about.scss
+++ b/assets/sass/components/_project-about.scss
@@ -6,17 +6,22 @@
     flex-direction: column;
   }
   &__box {
+    display: flex;
+    flex-direction: column;   
     margin-bottom: 40px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-
     &:first-child {
       p {
         font-size: 16px;
         line-height: 26px;
-        font-family: $montserrat-bold;
+        font-family: $montserrat-bold; 
+      }
+    }
+
+    &-content{
+      p {
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
   }
@@ -29,7 +34,7 @@
     }
     &__box {
       h2 {
-        margin-bottom: 60px;
+        margin-bottom: 75px;
       }
       &:first-child {
         margin-right: 25px;
@@ -37,9 +42,12 @@
         font-size: 18px;
         line-height: 28px;
       }
-      &:last-child {
-        columns: 2 300px;
-        column-gap: 25px;
+      &-content {
+
+        &:last-child {
+          columns: 2 300px;
+          column-gap: 25px;
+        }
       }
     }
   }
