--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -157,7 +157,18 @@
     &-inner {
       padding: 80px 0;
     }
+    &-close {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 50px;
+      font-size: 16px;
+      letter-spacing: 1px;
+      font-family: $raleway;
+      color: $blue;
+      cursor: pointer;
+    }
     &-title {
+      margin-bottom: 50px;
       font-size: 20px;
       line-height: 24px;
       letter-spacing: 3.2px;
@@ -222,7 +233,10 @@
     &__full-cast {
       max-width: 1440px;
       margin: 0 auto;
-
+      &-close {
+        font-size: 24px;
+        line-height: 44px;
+      }
       &-title {
         margin-bottom: 80px;
         font-size: 34px;
