--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -24,6 +24,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'general/global-styles',
 	'components/footer',
 	'components/header',
+	'components/bio',
 	'components/info',
 	'components/press',
 	'components/video',
