--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -112,9 +112,15 @@
   }
 }
 
+@include tablet() {
+  .testimonials-section {
+    padding: 40px 7% 80px; 
+  }
+}
+
 @include desktop() {
   .testimonials-section {
-    padding: 120px 15%;
+    padding: 120px 7%;
     margin-bottom: 50px;
     &__wrapper {
       display: flex;
@@ -125,11 +131,15 @@
       margin: 0;
       max-width: 300px;
     }
-    &__title {
-      max-width: 364px;
-      h1 {
-        letter-spacing: 4.4px;
+    &__titles {
+      max-width: 425px;
+      text-align: right;
+      &-title {
         width: 100%;
+        &::after {
+          left: auto;
+          right: 0;
+        }
       }
     }
     &__item-content {
