--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -305,6 +305,11 @@ a.disabled {
 			height: 10px;
 		}
 	}
+	h4 {
+		font-size: 30px;
+		line-height: 44px;
+		letter-spacing: 3px;
+	}
 	p {
 		// letter-spacing: 0.8px;
 	}
