Adding style for wrapper on large desktops for testimonial

--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -165,3 +165,12 @@
   }
 }
 
+@include desktop-lg() {
+  .testimonials-section {
+    &__wrapper {
+      max-width: 1440px;
+      margin: 0 auto;
+    }
+  }
+}
+
