--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -173,4 +173,11 @@
     }
   }
 }
+@include desktop-xlg() {
+  .testimonials-section {
+    &__wrapper {
+      max-width: 1920px;
+    }
+  }
+}
 
