--- a/assets/sass/components/_video.scss
+++ b/assets/sass/components/_video.scss
@@ -49,7 +49,7 @@
     video {
       position: relative;
       height: 100vh;
-      margin-top: -60px;
+      // margin-top: -60px;
       display: flex;
       align-items: center;
       justify-content: center;
