Fixes for wrapper, header, hero section 14.aug

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -160,9 +160,9 @@
   }
   .header {
     height: 100px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0;
+    // max-width: 1200px;
+    // margin: 0 auto;
+    padding: 0 7%;
     background: transparent;
     &__hamburger-wrapp {
       display: none;
@@ -181,10 +181,12 @@
 @include desktop-lg() {
   .header {
     max-width: 1440px;
+    margin: 0 auto;
+    padding: 0;
   }
 }
-@include desktop-xlg() {
-  .header {
-    max-width: 1920px;
-  }
-}
+// @include desktop-xlg() {
+//   .header {
+//     // max-width: 1920px;
+//   }
+// }
