--- a/assets/sass/general/_global-styles.scss
+++ b/assets/sass/general/_global-styles.scss
@@ -271,6 +271,8 @@ a.disabled {
 
 @include desktop() {
 	.wrapper {
+		// max-width: 1200px;
+		// margin: 0 auto;
 		padding: 0 7%;
 	}
 	h1 {
@@ -328,7 +330,7 @@ a.disabled {
 }
 @include desktop-xlg() {
 	.wrapper {
-		max-width: 1920px;
+		// max-width: 1920px;
 	}
 	h2 {
 		font-size: 58px;
