Big css cleanup 14.aug

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,9 +1,9 @@
 /*!
-Theme Name: DSI Budimo Pametni
+Theme Name: Void
 Theme URI:
 Author: Milan Poznan
 Author URI: https://www.linkedin.com/in/milan-poznan-0a0369109/
-Description: Custom WP theme for Budimo Pametni
+Description: Custom WP theme for Void
 Version: 1.0.0
 Text Domain: 
 Tags:
